# ITK

./: pyproject.toml
_1_module/: lru_cache.py  metaclass_created_at.py
_1_module/singleton/: singleton_with_metaclass.py
_1_module/singleton/singleton_import/: main.py
_2_module/: search_element_in_array.py
_3_module/: fetch_1_0.py  results.jsonl
_3_module/fetch_with_parsing/: results.jsonl
_3_module/fetch_with_status_codes/: fetch_1_0.py
_4_module/: multi.py  results.csv
_6_module/: app.py
src/_1_week/_1_module/: metaclass_created_at.py
src/_1_week/_1_module/singleton/singleton_import/: my_singleton.py
src/_1_week/_3_module/fetch_with_parsing/: fetch_with_parse.py  urls.txt
src/_1_week/_4_module/: multi.py  results.csv
src/_2_week/redis/: README.md  rate_limiter.py  redis_queue.py  single_decorator.py
