[project]
name = "itk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "asyncio>=4.0.0",
    "redis>=7.1.0",
    "ruff>=0.14.8",
    "uvicorn>=0.38.0",
]
[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
